--- a/Resources/administration/src/module/sw-media/component/sidebar/sw-media-quickinfo/sw-media-quickinfo.html.twig
+++ b/Resources/administration/src/module/sw-media/component/sidebar/sw-media-quickinfo/sw-media-quickinfo.html.twig
@@ -78,7 +78,7 @@
                         {% block sw_media_quickinfo_preview_content %}
                             <div class="sw-media-quickinfo__collapse-content">
                                 <div class="sw-media-quickinfo__preview">
-                                    <img :src="item.links.url" class="sw-media-quickinfo__image">
+                                    <img :src="item.extensions.links.url" class="sw-media-quickinfo__image">
                                 </div>
                             </div>
                         {% endblock %}
