NEXT-459 - Support momentum scrolling, fix sw-field appearance

--- a/Resources/administration/src/app/component/form/sw-field/sw-field.less
+++ b/Resources/administration/src/app/component/form/sw-field/sw-field.less
@@ -108,6 +108,8 @@
         line-height: 27px;
         transition: @sw-field-transition;
         color: @sw-field-color-text;
+        -webkit-appearance: none;
+        -moz-appearance: none;
 
         &:focus {
             border-color: @sw-field-color-focus;
