--- a/Resources/administration/src/app/component/structure/sw-card-view/sw-card-view.less
+++ b/Resources/administration/src/app/component/structure/sw-card-view/sw-card-view.less
@@ -5,6 +5,7 @@
     position: absolute;
     overflow-x: hidden;
     overflow-y: auto;
+    -webkit-overflow-scrolling: touch;
 
     @media screen and (max-width: 1360px) {
         padding: 15px;
