--- a/Resources/administration/src/app/component/base/sw-modal/sw-modal.less
+++ b/Resources/administration/src/app/component/base/sw-modal/sw-modal.less
@@ -24,6 +24,8 @@
     z-index: @sw-modal-z-index;
     overflow-x: hidden;
     overflow-y: auto;
+    height: 100%;
+    width: 100%;
 
     .sw-modal__dialog {
         max-width: 700px;
@@ -109,7 +111,7 @@
 
     .sw-modal__body {
         padding: 20px 30px;
-        position:relative;
+        position: relative;
     }
 
     .sw-modal__footer {
