NEXT-458 - Add momentum scrolling, re-apply scrollbar offset after resize

--- a/Resources/administration/src/app/component/grid/sw-grid/sw-grid.less
+++ b/Resources/administration/src/app/component/grid/sw-grid/sw-grid.less
@@ -108,6 +108,7 @@
         justify-self: stretch;
         overflow-x: hidden;
         overflow-y: auto;
+        -webkit-overflow-scrolling: touch;
     }
 
     .sw-grid__action-button {
