--- a/Resources/administration/src/app/component/structure/sw-admin-menu-item/sw-admin-menu-item.html.twig
+++ b/Resources/administration/src/app/component/structure/sw-admin-menu-item/sw-admin-menu-item.html.twig
@@ -7,7 +7,7 @@
         {% block sw_admin_menu_item_router_link %}
             <router-link v-if="entry.path"
                          class="sw-admin-menu__navigation-link"
-                         :to="{ name: entry.path }">
+                         :to="getLinkToProp">
 
                 {% block sw_admin_menu_item_icon %}
                     <sw-icon v-if="displayIcon"
@@ -20,7 +20,7 @@
 
                 {% block sw_admin_menu_item_text %}
                     <span :class="collapsibleText ? 'collapsible-text' : ''">
-                        {{ $tc(entry.label) }}
+                        {{ getEntryLabel }}
                     </span>
                 {% endblock %}
             </router-link>
