--- a/Resources/administration/src/app/component/structure/sw-admin-menu/sw-admin-menu.less
+++ b/Resources/administration/src/app/component/structure/sw-admin-menu/sw-admin-menu.less
@@ -6,7 +6,7 @@
 @sw-admin-menu-width-expanded:          300px;
 @sw-admin-menu-width-collapsed:         80px;
 @sw-admin-menu-width-flyout:            220px;
-@sw-admin-menu-z-index-flyout:          500;
+@sw-admin-menu-z-index-flyout:          @z-index-flyout;
 @sw-admin-menu-transition:              .4s cubic-bezier(.50, .32, .01, 1);
 @sw-admin-menu-sub-menu-transition:     .35s cubic-bezier(.50, .32, .01, 1);
 @sw-admin-menu-flyout-transition:       .2s cubic-bezier(.50, .32, .01, 1);
