--- a/Resources/administration/src/app/component/structure/sw-search-bar/sw-search-bar.less
+++ b/Resources/administration/src/app/component/structure/sw-search-bar/sw-search-bar.less
@@ -6,7 +6,7 @@
 @sw-search-bar-border-radius:            @border-radius-default;
 @sw-search-bar-results-box-shadow:       0 3px 6px 0 rgba(120, 138, 155, 0.3);
 @sw-search-bar-results-z-index:          800;
-@sw-search-bar-z-index:                  500;
+@sw-search-bar-z-index:                  @z-index-search-bar-results;
 
 .sw-search-bar {
     width: 100%;
