--- a/Resources/administration/src/app/component/context-menu/sw-context-menu/sw-context-menu.less
+++ b/Resources/administration/src/app/component/context-menu/sw-context-menu/sw-context-menu.less
@@ -1,13 +1,14 @@
 @import '~less/variables';
 
-@sw-context-menu-color-border:              @color-steam-cloud;
-@sw-context-menu-color-background-hover:    @color-light-gray;
-@sw-context-menu-color-text:                @color-gutenberg;
-@sw-context-menu-color-active:              @color-shopware-blue;
+@sw-context-menu-color-border:           @color-steam-cloud;
+@sw-context-menu-color-background-hover: @color-light-gray;
+@sw-context-menu-color-text:             @color-gutenberg;
+@sw-context-menu-color-active:           @color-shopware-blue;
+@sw-context-menu-z-index:                @z-index-context-menu;
 
 .sw-context-menu {
     position: absolute;
-    z-index: 900;
+    z-index: @sw-context-menu-z-index;
     cursor: pointer;
 
     .sw-context-menu__content {
