--- a/Resources/administration/src/app/component/form/sw-multi-select/sw-multi-select.less
+++ b/Resources/administration/src/app/component/form/sw-multi-select/sw-multi-select.less
@@ -11,7 +11,7 @@
 @sw-multi-select-input-color-text:                @color-gutenberg;
 @sw-multi-select-input-color-placeholder:         lighten(@color-gutenberg, 25%);
 @sw-multi-select-results-max-height:              315px;
-@sw-multi-select-results-z-index:                 1000;
+@sw-multi-select-results-z-index:                 @z-index-multi-select-results;
 @sw-multi-select-results-box-shadow:              0 2px 4px 0 rgba(0, 0, 0, 0.09);
 @sw-multi-select-result-color-icon:               darken(@color-light-gray, 20%);
 @sw-multi-select-result-active-color-background:  lighten(@color-shopware-blue, 40%);
