--- a/Resources/administration/src/app/component/utils/sw-notifications/sw-notifications.less
+++ b/Resources/administration/src/app/component/utils/sw-notifications/sw-notifications.less
@@ -1,6 +1,8 @@
-@sw-notifications-gap: 20px;
-@sw-notifications-z-index: 1100;
-@sw-notifications-width: 400px;
+@import "~less/variables";
+
+@sw-notifications-gap:        20px;
+@sw-notifications-z-index:    @z-index-notifications;
+@sw-notifications-width:      400px;
 @sw-notifications-transition: .3s cubic-bezier(0.4, 0.0, 0.2, 1);
 
 .sw-notifications {
