NEXT-551 - Delete media items from sidebar

--- a/Resources/administration/src/module/sw-media/component/sidebar/sw-media-quickinfo/sw-media-quickinfo.html.twig
+++ b/Resources/administration/src/module/sw-media/component/sidebar/sw-media-quickinfo/sw-media-quickinfo.html.twig
@@ -20,7 +20,7 @@
                                 {% endblock %}
 
                                 {% block sw_media_quickinfo_quickactions_download %}
-                                    <a class="sw-media-quickinfo__quickaction" :href="this.item.links.url" download>
+                                    <a class="sw-media-quickinfo__quickaction" :href="this.item.extensions.links.url" download>
                                         <sw-icon small name="default-action-cloud-download"
                                                  class="sw-media-quickinfo__quickactions-icon"></sw-icon>
                                         {{ $tc('sw-media.sidebar.quickinfo.download') }}
@@ -78,7 +78,7 @@
                         {% block sw_media_quickinfo_preview_content %}
                             <div class="sw-media-quickinfo__collapse-content">
                                 <div class="sw-media-quickinfo__preview">
-                                    <img :src="item.links.url" class="sw-media-quickinfo__image">
+                                    <img :src="item.extensions.links.url" class="sw-media-quickinfo__image">
                                 </div>
                             </div>
                         {% endblock %}
