NEXT-551 - Delete media items from sidebar

--- a/Resources/administration/src/module/sw-media/page/sw-media-catalog/sw-media-catalog.html.twig
+++ b/Resources/administration/src/module/sw-media/page/sw-media-catalog/sw-media-catalog.html.twig
@@ -46,12 +46,16 @@
                             ></sw-media-sidebar>
                         </div>
                     {% endblock %}
+
                 </div>
             {% endblock %}
-            <sw-media-modal-delete :itemsToDelete = "selectionToDelete"
-                                   @sw-media-modal-delete-close="closeDeleteModal"
-                                   @sw-media-modal-delete-delete="deleteSelection">
-            </sw-media-modal-delete>
+
+            {% block sw_media_catalog_modal_delete %}
+                <sw-media-modal-delete :itemsToDelete ="selectionToDelete"
+                   @sw-media-modal-delete-close="closeDeleteModal"
+                   @sw-media-modal-delete-delete="deleteSelection">
+                </sw-media-modal-delete>
+            {% endblock %}
         </template>
     </sw-page>
 {% endblock %}
