--- a/Resources/administration/src/module/sw-media/page/sw-media-index/sw-media-index.html.twig
+++ b/Resources/administration/src/module/sw-media/page/sw-media-index/sw-media-index.html.twig
@@ -52,10 +52,13 @@
                     {% endblock %}
                 </div>
             {% endblock %}
-            <sw-media-modal-delete :itemsToDelete = "selectionToDelete"
-                @sw-media-modal-delete-close="closeDeleteModal"
-                @sw-media-modal-delete-delete="deleteSelection">
-            </sw-media-modal-delete>
+
+            {% block sw_media_index_modal_delete %}
+                <sw-media-modal-delete :itemsToDelete ="selectionToDelete"
+                   @sw-media-modal-delete-close="closeDeleteModal"
+                   @sw-media-modal-delete-delete="deleteSelection">
+                </sw-media-modal-delete>
+            {% endblock %}
         </template>
     </sw-page>
 {% endblock %}
