--- a/Resources/administration/src/module/sw-media/component/sw-media-modal-delete/sw-media-modal-delete.html.twig
+++ b/Resources/administration/src/module/sw-media/component/sw-media-modal-delete/sw-media-modal-delete.html.twig
@@ -1,20 +1,30 @@
-<sw-modal v-if="showModal"
-          variant="small"
-          @closeModal="closeDeleteModal($event)"
-          :title="$tc('sw-media.modalDelete.modalHeader')">
-    <div v-if="itemsToDelete.length === 1">
-        {{ $tc('sw-media.modalDelete.deleteMessageSingular', 0, { mediaName: itemsToDelete[0].name }) }}
-    </div>
-    <div v-else>
-        {{ $tc('sw-media.modalDelete.deleteMessagePlural', 0, { count: itemsToDelete.length}) }}
-    </div>
+{% block sw_media_modal_delete %}
+    <sw-modal v-if="showModal"
+              variant="small"
+              class="sw-media-modal-delete"
+              @closeModal="closeDeleteModal($event)"
+              :title="$tc('sw-media.modalDelete.modalHeader')">
 
-    <template slot="modal-footer">
-        <sw-button @click="closeDeleteModal($event)" size="small">
-            {{ $tc('sw-media.modalDelete.modalButtonNo') }}
-        </sw-button>
-        <sw-button @click="deleteSelection($event)" size="small" variant="primary">
-            {{ $tc('sw-media.modalDelete.modalButtonYes') }}
-        </sw-button>
-    </template>
-</sw-modal>
+        {% block sw_media_modal_body %}
+            {{ $tc('sw-media.modalDelete.deleteMessage', itemsToDelete.length, { mediaName: itemsToDelete[0].name, count: itemsToDelete.length }) }}
+        {% endblock %}
+
+        {% block sw_media_modal_footer %}
+            <template slot="modal-footer">
+
+                {% block sw_media_modal_delete_cancel_button %}
+                    <sw-button @click="closeDeleteModal($event)" size="small">
+                        {{ $tc('sw-media.modalDelete.modalButtonAbort') }}
+                    </sw-button>
+                {% endblock %}
+
+                {% block sw_media_modal_delete_confirm_button %}
+                    <sw-button @click="deleteSelection($event)" size="small" variant="primary">
+                        {{ $tc('sw-media.modalDelete.modalButtonDelete') }}
+                    </sw-button>
+                {% endblock %}
+
+            </template>
+        {% endblock %}
+    </sw-modal>
+{% endblock %}
