--- a/Resources/administration/src/module/sw-media/page/sw-media-catalog/sw-media-catalog.html.twig
+++ b/Resources/administration/src/module/sw-media/page/sw-media-catalog/sw-media-catalog.html.twig
@@ -43,10 +43,10 @@
                             <sw-media-sidebar
                                     :item="lastSelectedItem"
                                     v-on="mediaSidebarListener"
+                                    ref="mediaSidebar"
                             ></sw-media-sidebar>
                         </div>
                     {% endblock %}
-
                 </div>
             {% endblock %}
 
