NEXT-458 - Implement mobile header, search bar and offCanvas (W.I.P.)

--- a/Resources/administration/src/app/component/structure/sw-admin-menu/sw-admin-menu.html.twig
+++ b/Resources/administration/src/app/component/structure/sw-admin-menu/sw-admin-menu.html.twig
@@ -1,6 +1,6 @@
 {% block sw_admin_menu %}
     <aside class="sw-admin-menu"
-           :class="isExpanded ? 'is--expanded' : 'is--collapsed'"
+           :class="adminMenuClasses"
            :aria-expanded="isExpanded ? 'true' : 'false'">
 
         {% block sw_admin_menu_header %}
