--- a/Resources/administration/src/app/component/structure/sw-desktop/sw-desktop.less
+++ b/Resources/administration/src/app/component/structure/sw-desktop/sw-desktop.less
@@ -5,4 +5,12 @@
     height: 100%;
     width: 100%;
     overflow: hidden;
+
+    @media screen and (max-width: 500px) {
+        display: block;
+
+        .sw-desktop__content {
+            height: 100%;
+        }
+    }
 }
