ntr - fix bug in sw-field template

--- a/Resources/administration/src/app/component/form/sw-field/sw-field.html.twig
+++ b/Resources/administration/src/app/component/form/sw-field/sw-field.html.twig
@@ -251,7 +251,7 @@
             <div class="sw-field__error" v-if="hasError">
                 <slot name="error">
                     {% block sw_field_slot_error %}
-                        <span v-if="errorMessage"{{ errorMessage }}></span>
+                        <span v-if="errorMessage">{{ errorMessage }}</span>
                         <span v-if="formError.detail">{{ formError.detail }}</span>
                     {% endblock %}
                 </slot>
